--- a/src/app/order-list/order-list.component.html
+++ b/src/app/order-list/order-list.component.html
@@ -1,3 +1,8 @@
 <div>
+    <h2>Order List</h2>
     <app-add-order (save)="save($event)"></app-add-order>
+    <div *ngFor="let order of repairList">
+        {{order.customer}}{{order.instrument}}
+        <button (click)="openOrder(order.id)">Open</button>
+    </div>
 </div>
