--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <h1>Instrument Repair Shop </h1>
 
-
-<app-order-list></app-order-list>
+<a routerLink="/">List</a>
+&nbsp;&nbsp;
+<a routerLink="/bookmarks">Bookmarks</a>
+<router-outlet></router-outlet>
