--- a/src/app/book-marks/book-marks.component.html
+++ b/src/app/book-marks/book-marks.component.html
@@ -1,6 +1,6 @@
 <h1>Your BookMarks</h1>
 <div *ngFor="let item of TheList">
-    {{item.customer}} {{item.bookmark}} {{item.price}} {{item.notes}}
+    Name: {{item.customer}}--------c Instrument: {{item.instrument}}
 </div>
 
 
